--- a/energy_assets_frontend/src/App.css
+++ b/energy_assets_frontend/src/App.css
@@ -35,6 +35,13 @@
   box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.1);
 }
 
+.center {
+  position: relative;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
 .right {
   text-align: right;
 }
